lowlighter-metrics/force-souin-swr-middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: force-souin-swr

spec:
  headers:
    customRequestHeaders:
      Cache-Control: max-stale
