lowlighter-metrics/swr-middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: swr

spec:
  plugin:
    souin:
      default_cache:
        ttl: 3600s
        stale: 86400s
