lowlighter-metrics/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: metrics

spec:
  replicas: 1
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app: metrics
  template:
    metadata:
      labels:
        app: metrics
    spec:
      enableServiceLinks: false
      nodeSelector:
        kubernetes.io/arch: amd64

      volumes:
        - name: settings
          secret:
            secretName: settings

      containers:
        - name: cache
          image: ghcr.io/motoki317/swr-cache:0.0.6
          args:
            - --ttl=1h
            - --grace=168h
            - --target=http://localhost:3000
            - --port=8080
          ports:
            - containerPort: 8080
              name: http

        - name: metrics
          image: ghcr.io/lowlighter/metrics:v3.33
          command:
            - npm
            - start
          volumeMounts:
            - mountPath: /metrics/settings.json
              name: settings
              subPath: settings.json
