lowlighter-metrics/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: metrics

spec:
  type: ClusterIP
  ports:
    - port: 80
      name: http
      targetPort: http
  selector:
    app: metrics
